2.0.5:
* segway: fixed bug causing identify to fail with archives of different track numbers
* segway: fixed python 3 encoding issue arising when --BigBed is selected
* segway: removed sleeping on main segway process for multiple training instances
* segway: when running locally segway will no longer initially sleep training threads

2.0.4:
* segway: gaussian mixtures no longer split with only one component
* segway: priors and mixture components are now derived from previous EM
  iterations instead of from input master
* segway: the DPMF table is now stored as constants instead of a fixed table
  allowing splitting and vanishing components to resize correctly
* segway: updated test touchstones for newer GLIBC versions
* segway: SLURM: added support for 18.08 (https://github.com/natefoo/slurm-drmaa)

2.0.3:
* segway: fix fatal TypeError during --dry-run
* segway: fix temporary file creation of observations for multiple instances
* segway: Added compatibility for python 3
* segway: No longer requires forked-path, now needs path.py>=10

2.0.2:
* segway: fix window selection when using multiple genomedata archives
* segway: add window.bed output to cross reference window index to chromomsome
  region
* segway: add instance specific job log files to avoid log overwrites
* segway: fix regression of stdout not being captured from training jobs
* segway: update support for versions of numpy > 1.14 by adding legacy scalar
  and vector text printing

2.0.1:
* segway: fix training results not being parsed properly due to validation
  defaults

2.0:
* segway: Add ability to use validation set to choose winner for training
  (activate using --validation-coords or --validation-fraction options)
  (thanks to Rachel Chan)

1.4.4:
* segway: Add mixture of Gaussians and variance floor functionality to Segway
  (thanks to Max Libbrecht, Oscar Rodriguez, and Rachel Chan)

1.4.3:
* segway: fix "bad interpreter: Text file busy" errors reported by submitted
  jobs

1.4.2: